[package]
name = "ws2812-timer-delay"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dependencies]
nb = "0.1.1"
smart-leds-trait = {git = "https://github.com/smart-leds-rs/smart-leds-trait"}

[features]
slow = []

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dev-dependencies]
bare-metal = "0.2.4"
cortex-m = "0.5.8"
cortex-m-rt = "0.6"
panic-halt = "0.2"
stm32f0xx-hal = {version = "0.11", features = ["stm32f030x4"]}
smart-leds = {git = "https://github.com/smart-leds-rs/smart-leds"}

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
